last version so far, everything works as expected, ready to submit